<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/regAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="0dp"
        app:elevation="0dp"
        android:translationZ="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/regToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:titleTextAppearance="@style/app_bar_text"
            app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
            app:navigationIconTint="@color/black"
            app:title="Register"
            app:titleTextColor="@color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/sz_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAppBarLayout">

        <TextView
            android:id="@+id/regInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_info"
            android:textColor="@color/ts_primary"
            android:textSize="@dimen/tsz_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entName"
            style="@style/outlined_inputs_field"
            android:layout_marginTop="24dp"
            android:theme="@style/outlined_inputs_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regInfoText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sz_48"
                android:hint="@string/input_enter_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/ts_primary"
                android:textSize="@dimen/tsz_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entPhone"
            style="@style/outlined_inputs_field"
            android:layout_marginTop="24dp"
            android:theme="@style/outlined_inputs_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_phone">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_areaCodeDetectedCountry="true"
                    app:ccp_arrowSize="@dimen/tsz_24"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_autoFormatNumber="true"
                    app:ccp_contentColor="@color/ts_primary"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"
                    app:ccp_textGravity="CENTER"
                    app:ccp_textSize="@dimen/tsz_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/sz_32"
                    android:background="@color/ts_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/countryCodePicker"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/sz_48"
                    android:hint="@string/input_enter_phone"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/ts_primary"
                    android:textSize="@dimen/tsz_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entEmail"
            style="@style/outlined_inputs_field"
            android:layout_marginTop="24dp"
            android:theme="@style/outlined_inputs_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sz_48"
                android:hint="@string/input_enter_email"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/ts_primary"
                android:textSize="@dimen/tsz_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entPassword"
            style="@style/outlined_inputs_field"
            android:layout_marginTop="24dp"
            android:theme="@style/outlined_inputs_field"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/ts_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sz_48"
                android:hint="@string/input_enter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/ts_primary"
                android:textSize="@dimen/tsz_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entLocation"
            style="@style/outlined_inputs_field"
            android:layout_marginTop="24dp"
            android:theme="@style/outlined_inputs_field"
            app:endIconDrawable="@drawable/ic_baseline_my_location_24"
            app:endIconMode="custom"
            app:endIconTint="@color/ts_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sz_48"
                android:hint="@string/location"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/ts_primary"
                android:textSize="@dimen/tsz_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entDate"
            style="@style/outlined_inputs_field"
            android:layout_marginTop="24dp"
            android:theme="@style/outlined_inputs_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entLocation">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sz_48"
                android:hint="@string/input_enter_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="@color/ts_primary"
                android:textSize="@dimen/tsz_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entDate">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textColor="@color/ts_primary"
                app:buttonTint="@color/ts_secondary" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textColor="@color/ts_primary"
                app:buttonTint="@color/ts_secondary" />
        </RadioGroup>

        <Button
            style="@style/button_solid"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/ts_secondary"
            android:text="@string/register"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/ts_primary"
                android:textSize="@dimen/tsz_12" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>